[workspace]
members = [
    ".",
    "example"
]

[package]
name = "rexpr"
version = "1.0.4"
description = "Rust Json Object access Runtime"
authors = ["zhuxiujie <zhuxiujia@qq.com>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#serde
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }