[package]
name = "example"
version = "0.1.0"
authors = ["zhuxiujie <zhuxiujia@qq.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rexpr={ path = "../" }
#serde
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

