[package]
name = "rexpr-macro"
version = "0.1.0"
authors = ["zhuxiujie <zhuxiujia@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug_mode=[]
[lib]
proc-macro = true
[dependencies]
proc-macro2 = "1.0.26"
quote = "1.0.9"
syn = {version="1.0.68",features=["full"]}